--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="/css/styles-productDetail.css">
+    <link rel="stylesheet" href="/css/styles-register.css">
     <link rel="stylesheet" href="/css/styles-header-footer.css">
 
     <!-- ICONO DE LA PESTAÑA -->
@@ -21,6 +22,7 @@
     <script src="https://kit.fontawesome.com/3f4ccc7b29.js" crossorigin="anonymous"></script>
 
 </head>
+
 
 <body>
     <header>
@@ -45,7 +47,7 @@
 
             <!------------------ LOGIN Y REGISTER --------------------->
             <article class="login-icon">
-                <a href="/login"><i class="fa-solid fa-user"></i></a>
+                <a href="/user/login"><i class="fa-solid fa-user"></i></a>
             </article>
 
             <article class="favorites-icon">
@@ -53,7 +55,7 @@
             </article>
             
             <article class="cart-icon">
-                <a href="/productcart"><i class="fa-solid fa-cart-arrow-down"></i></a>
+                <a href="/product/productcart"><i class="fa-solid fa-cart-arrow-down"></i></a>
             </article>
 
         </section>
@@ -99,56 +101,39 @@
     </header>
 
     <main>
+        
+        <!----------------- FORMULARIO DE REGISTRO ------------------------>
+        <section class="fondo-register">
+            <article class="contenedor-register">
+                <form action="" method="post">
 
-        <!----------------- CONTENEDOR DE LAS IMAGENES DEL DETALLE DE PRODUCTO ------------------------>
-        <section class="imagenes-producto">
+                    <!----------------- TITULO DEL FORMULARIO ------------------------>
+                    <label class="titulo-register">Registrarse</label>
 
-            <!----------------- IMAGENES MINIATURA DEL PRODUCTO ------------------------>
-            <article class="contenedor-imagenes-pequeñas">
-                <div><img src="/img/productos/producto-1.webp" alt=""></div>
-                <div><img src="/img/productos/producto-1.webp" alt=""></div>
-                <div><img src="/img/productos/producto-1.webp" alt=""></div>
-                <div><img src="/img/productos/producto-1.webp" alt=""></div>
+                    <!----------------- CAMPOS DEL FORMULARIO ------------------------>
+                    <label for="usuario">Usuario</label>
+                    <input type="text" id="usuario" required>
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" required>
+
+                    <label for="contrasenia">Contraseña</label>
+                    <input type="password" id="contrasenia" required>
+
+                    <label for="confirmar-contrasenia">Confirmar contraseña</label>
+                    <input type="password" id="confirmar-contrasenia" required>
+
+                    <!----------------- VOLVER A LA PAGINA DE LOGIN ------------------------>
+                    <a href="/user/login">¿Ya tienes cuenta? Ingresa</a>
+
+                    <!----------------- BOTON DE REGISTRARSE ------------------------>
+                    <button type="submit" class="registrarse">Registrarse</button>
+                </form>
             </article>
 
-            <!----------------- IMAGEN PRINCIPAL DEL PRODUCTO ------------------------>
-            <article class="contenedor-imagen-principal">
-                <img src="/img/productos/producto-1.webp" alt="">
-            </article>
-        </section>
-
-        <!----------------- CONTENEDOR DE LA INFORMACION DEL PRODUCTO JUNTO A LOS BOTONES DE ACCION ------------------------>
-        <section class="contenedor-detalles-producto">
-
-            <!----------------- INFORMACION DEL PRODUCTO ------------------------>
-            <article class="informacion-producto">
-                <p class="marca">HKC</p>
-                <h3>Monitor HKC ANTTEQ F2145M 21.45" 75hz</h3>
-                <p class="precio">$ 78.000</p>
-
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis assumenda corrupti 
-                nulla voluptate, itaque architecto velit at asperiores, accusamus earum distinctio quia, 
-                porro aut hic incidunt? Deserunt reiciendis assumenda nisi!</p>
-            </article>
-            
-            <!----------------- AQUI ESTAN LOS BOTONES DE CANTIDAD Y FAVORITOS ------------------------>
-            <article class="contenedor-cantidad-favoritos">
-
-                <!----------------- BOTONES PARA AÑADIR LA CANTIDAD DESEADA ------------------------>
-                <article class="boton-cantidad">
-                    <p>Cantidad:</p> <button>-</button><input type="text" value="1"><button>+</button> 
-                </article>
-
-                <!----------------- BOTON PARA AGREGAR A FAVORITOS; FALTA AÑADIR ESA SECCION ------------------------>
-                <article class="boton-favoritos">
-                    <button><i class="fa-regular fa-heart"></i></button><p>Favoritos</p>
-                </article>
-            </article>
-
-            <!----------------- BOTONES PARA AGREGAR AL CARRITO Y COMPRAR ------------------------>
-            <article class="botones-comprar-carrito">
-                <button>Agregar al carrito</button>
-                <button>Comprar ahora</button>
+            <!----------------- FRASE PARA RECIBIR A LOS USUARIOS QUE SE REGISTRAN ------------------------>
+            <article class="frase-register">
+                <p>Explora un mar de posibilidades tecnológicas al abrir la puerta a nuestro mundo digital.</p>
             </article>
         </section>
     </main>
