--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -75,23 +75,23 @@
             <nav class="nav-categorias">
                 <ul>
                     <li>
-                        <a href="">Laptops</a>
+                        <a href="/product/productsCategories/laptops">Laptops</a>
                         <div class="nav-gradient"></div>
                     </li>
                     <li>
-                        <a href="">Oficina</a>
+                        <a href="/product/productsCategories/oficina">Oficina</a>
                         <div class="nav-gradient"></div>
                     </li>
                     <li>
-                        <a href="">Estudiantes</a>
+                        <a href="/product/productsCategories/estudiantes">Estudiantes</a>
                         <div class="nav-gradient"></div>
                     </li>
                     <li>
-                        <a href="">Accesorios</a>
+                        <a href="/product/productsCategories/accesorios">Accesorios</a>
                         <div class="nav-gradient"></div>
                     </li>
                     <li>
-                        <a href="">Gamer</a>
+                        <a href="/product/productsCategories/gamer">Gamer</a>
                         <div class="nav-gradient"></div>
                     </li>
                 </ul>
